SERVER-82450 Adjust defaults for renameCollection across dbs (#17974)

GitOrigin-RevId: 532cd3934c9b734420bb36d296466bb70d8ad38b