jstests/noPassthrough/rename_collection_across_dbs.js
@@ -6,9 +6,14 @@
  * ]
  */
 
+// Declaring all variables up top so each test can be individually run
+let srcNsRegex, opEntries, applyOpsOpEntries, db, db2, coll1, primary, numNewDocs, testDescription,
+    largeNumberOfDocsToExceedBatchCountLimit, srcDb, dstDb, srcColl, testNum, numDocsToInsert;
+
 const testName = jsTestName();
 let dbName1 = testName + '1-1';
 let dbName2 = testName + '1-2';
+const BSONObjMaxUserSize = 16 * 1024 * 1024;
 const collName = "test";
 const collCount = 10;
 const maxInsertsCount = collCount;
@@ -29,15 +34,15 @@ let rst = new ReplSetTest(
 rst.startSet();
 rst.initiate();
 
-let primary = rst.getPrimary();
-let db = primary.getDB(dbName1);
+primary = rst.getPrimary();
+db = primary.getDB(dbName1);
 
-let coll1 = db.getCollection(collName);
+coll1 = db.getCollection(collName);
 assert.commandWorked(coll1.insertMany([...Array(collCount).keys()].map(x => ({_id: x, a: x}))));
 assert.commandWorked(db.adminCommand({renameCollection: srcNs, to: dstNs}));
 
-let db2 = primary.getDB(dbName2);
-let opEntries =
+db2 = primary.getDB(dbName2);
+opEntries =
     db.getSiblingDB('local')
         .oplog.rs.find({op: 'i', ns: {$regex: '^' + dbName2 + '\.tmp.{5}\.renameCollection$'}})
         .sort({$natural: -1})
@@ -51,7 +56,7 @@ opEntries = db.getSiblingDB('local')
                 .sort({$natural: -1})
                 .toArray();
 
-let applyOpsOpEntries = opEntries[0].o.applyOps;
+applyOpsOpEntries = opEntries[0].o.applyOps;
 for (const op of applyOpsOpEntries) {
     assert.eq(op.op, "i", "Each applyOps operation should be an insert");
 }
@@ -62,7 +67,7 @@ assert.eq(
 assert(!db.getCollectionNames().includes(collName));
 
 // Check new collection exists
-let numNewDocs = db2.getCollection(collName).find().itcount();
+numNewDocs = db2.getCollection(collName).find().itcount();
 assert.eq(collCount, numNewDocs);
 
 //
@@ -114,7 +119,7 @@ db = primary.getDB(dbName1);
 db2 = primary.getDB(dbName1);
 
 coll1 = db.getCollection(collName);
-let largeNumberOfDocsToExceedBatchCountLimit = (maxInsertsCount * 4);
+largeNumberOfDocsToExceedBatchCountLimit = (maxInsertsCount * 4);
 
 // Add 1 extra document to spill over to a new batch with 1 element
 for (let i = 0; i < largeNumberOfDocsToExceedBatchCountLimit + 1; i++) {
@@ -158,4 +163,88 @@ assert.eq(largeNumberOfDocsToExceedBatchCountLimit / maxInsertsCount,
           "Should be " + largeNumberOfDocsToExceedBatchCountLimit + "/" + maxInsertsCount +
               " insert oplog entries, in applyOps format.");
 
+/*
+ * 4. Too many documents, in size, testing the defaults
+ */
+testNum = 4;
+jsTestLog(testNum + ". Too many documents, in size, testing the defaults");
+
+let defaultMaxBatchSize, serverParam, sampleDoc, sampleDocFull, sampleDocSize, testCollName,
+    insertOps, applyOps;
+
+rst.stopSet();
+rst = new ReplSetTest({
+    nodes: [{}, {rsConfig: {votes: 0, priority: 0}}],
+    nodeOptions: {
+        setParameter: {
+            maxNumberOfInsertsBatchInsertsForRenameAcrossDatabases:
+                BSONObjMaxUserSize,  // ensure size limit is hit, not count
+        }
+    }
+});
+rst.startSet();
+rst.initiate();
+
+testDescription = "-too-many-documents-size-default";
+testCollName = collName + testDescription;
+dbName1 = testName + testNum + '-src';
+dbName2 = testName + testNum + '-dst';
+srcNs = dbName1 + '.' + testCollName;
+dstNs = dbName2 + '.' + testCollName;
+srcNsRegex = '^' + dbName2 + '\.tmp.{5}\.renameCollection$';
+
+primary = rst.getPrimary();
+srcDb = primary.getDB(dbName1);
+dstDb = primary.getDB(dbName2);
+
+sampleDoc = {
+    x: "a",
+    longString: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+};
+sampleDocFull = {
+    _id: ObjectId(),
+    doc: sampleDoc
+};
+sampleDocSize = Object.bsonsize(sampleDocFull);
+
+// Get default batched size byte limit to verify the current limit
+serverParam = assert.commandWorked(
+    srcDb.adminCommand({getParameter: 1, maxSizeOfBatchedInsertsForRenameAcrossDatabasesBytes: 1}));
+jsTestLog("Default batch size limit for renames across databases:" + tojson(serverParam))
+
+defaultMaxBatchSize = serverParam["maxSizeOfBatchedInsertsForRenameAcrossDatabasesBytes"];
+jsTestLog("defaultMaxBatchSize: " + defaultMaxBatchSize);
+jsTestLog("sampleDocSize: " + sampleDocSize);
+numDocsToInsert = Math.floor(defaultMaxBatchSize / sampleDocSize);
+
+jsTestLog("Inserting [" + numDocsToInsert + "] docs.");
+srcColl = srcDb.getCollection(testCollName);
+
+assert.commandWorked(srcColl.insertMany(
+    [...Array(numDocsToInsert).keys()].map(x => ({_id: ObjectId(), doc: sampleDoc}))));
+
+// Rename Collection Across Databases
+assert.commandWorked(srcDb.adminCommand({renameCollection: srcNs, to: dstNs}));
+
+// Verify operation from oplog
+insertOps = rst.findOplog(primary, {op: 'i', ns: {$regex: srcNsRegex}}).toArray();
+jsTestLog('plain insert oplog entry num: ' + insertOps.length);
+jsTestLog('plain insert oplog entry: ' + tojson(insertOps));
+
+applyOps = rst.findOplog(primary, {
+                  op: 'c',
+                  ns: 'admin.$cmd',
+                  'o.applyOps': {$elemMatch: {op: 'i', ns: {$regex: srcNsRegex}}}
+              })
+               .toArray();
+jsTestLog('applyOps oplog entries num: ' + applyOps.length);
+jsTestLog('applyOps oplog entries: ' + tojson(applyOps));
+assert.eq(numDocsToInsert,
+          applyOps[0].o.applyOps.length,
+          "Expect all inserts to land in one applyOps batch.");
+assert.eq(0, insertOps.length, "Expect no plain insert ops.");
+
+//
+// Teardown
+//
 rst.stopSet();
